# gnugo-esp

./: .gitignore  CMakeLists.txt  Kconfig  config.h.cmake  profile.sh
engine/: aftermath.c  board.c  board.h  boardlib.c  breakin.c  cache.c  combination.c  dragon.c  fuseki.c  genmove.c  globals.c  hash.c  influence.c  interface.c  liberty.h  matchpat.c  montecarlo.c  move_reasons.c  move_reasons.h  optics.c  owl.c  readconnect.c  reading.c  unconditional.c  utils.c  worm.c
interface/: CMakeLists.txt  gnugo_esp_wrapper.c  gnugo_esp_wrapper.h  interface.h  main.c  play_ascii.c  play_gtp.c
patterns/: .gitignore  CMakeLists.txt  dfa-mkpat.h  dfa.c  dfa.h  eyes.h  mkeyes.c  mkmcpat.c  mkpat.c  patterns.h  transform.c  uncompress_fuseki.c
sgf/: sgfnode.c  sgftree.h
utils/: getopt.c  random.c  winsocket.h
